Fix result title alignment

--- a/components/views/Game/Guesses/Results/Results.module.scss
+++ b/components/views/Game/Guesses/Results/Results.module.scss
@@ -20,6 +20,7 @@
 }
 
 .titleGroup {
+    align-items: baseline;
     display: inline-flex;
     justify-content: center;
     flex-wrap: wrap;
